--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="rating-card__descr">Please let us know how we did with your support request. All feedback is
           appreciated
           to help us improve our offering!</p>
-        <form class="rating-form" id="rating-form" action="" method="POST">
+        <form class="rating-form" id="rating-form" action="" method="post">
           <fieldset>
             <legend></legend>
             <ul class="rating-form__list">
