--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           to help us improve our offering!</p>
         <form class="rating-form" id="rating-form" action="" method="post">
           <fieldset>
-            <legend>Rate your experience</legend>
+            <legend class="sr-only">Rate your experience</legend>
             <ul class="rating-form__list">
               <li class="rating-form__list-item">
                 <input class="rating-form__radio" type="radio" name="rating-value" value="1" aria-label="Rating 1">
